finished 3 lab
